examples/test/testpolicy5570.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5570
  namespace: namespace370
spec:
  podSelector:
    matchLabels:
      key24: value22
      key47: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value12
      podSelector:
        matchLabels:
          key27: value31
          key42: value40
